header en eerste content

--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,52 @@
     })(document);
 
   </script>
-  
+
 
 </head>
 
-<body>
+  <body>
 
-  
-  <div class='react-mount'>
+    <header>
+      <section class="header-wrapper">
+        <cite>“Nico, van fotomodel in wit broekpak tot verslaafde zwerfster”</cite>
+        <div class="nico-headerimage"></div>
+      </section>
+    </header>
 
-  </div>
+    <main>
+
+      <section class="content">
+
+        <article class="articlestyle intro">
+          Christa Päffgen, beter bekend onder haar artiestennaam Nico, was een Duits fotomodel, actrice en zangeres. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.
+            <br/><br/>
+            Ze werd geboren in 1938, in het door de nazis geregeerde Duitsland. In 1960 werd ze een van de bekende Warhol superstars en zong ze vocals voor het debut album van the Velvet Undeground en haar werk als solo artieste. Ze acteerde ook in enkele films zoals Federico Fellini’s La Dolce Vita (1960) en Andy Warhol’s Chelsea Girls (1966).
+        </article>
+
+        <article class="articlestyle model">
+          De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit. De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een vat vol tegenstellingen:
+        </article>
+
+        <article class="articlestyle model">
+          Een andere, eerder cynische autoriteit is James Young, de biograaf die als student in de band zat die Nico begeleidde en die stuitende herinneringen ophaalt aan het touren met ‘the queen of the bad girls’. Young schetst haar als een gewelddadige figuur die in de tourbus heroïne in haar rectum verstopte voor de douane, als een ‘failure’. Ofteringer is duidelijk een fan, terwijl Young als biograaf veeleer uit lijkt op demythologisering. Dergelijke tegengestelde mechanismen treden wel vaker tegelijkertijd in werking zodra de nalatenschap van een iconische figuur in kaart moet worden gebracht.
+        </article>
+
+        <article class="articlestyle model">
+          Nico werd ontdekt als model op haar zestiende, toen ze nog verkoopster was in een lingeriezaak. De fotograaf die haar in 1954 vanuit de schaduw onder het licht bracht, was Herbert Tobias. Hij bedacht de artiestennaam Nico, naar zijn voormalige geliefde, de filmregisseur Nikos Papatakis. De naam bleek een programma te bevatten, de voorbode van een tweeslachtigheid die het imago van Nico zou gaan domineren. Haar rijzige gestalte gehuld in pantalon en haar zware, lage stem maakten indruk, zowel binnen de modewereld als in de artistieke omgeving waarin ze omstreeks 1965 belandde. In beide werelden stond het androgyne immers voor chique, enigmatisch en deviant. Denk maar aan het succes van supermodel Twiggy en de alter ego’s van David Bowie, die hun succes (net iets later dan Nico) precies mede te danken hadden aan hun geconstrueerde genderbender-esthetiek.
+        </article>
+
+      </section>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
+  <!-- <div class='react-mount'>
+
+  </div> -->
 
 </body>
 
