--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Hello, Nostalgie</title>
+  <title>Nico, Nostalgie</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <script>
@@ -31,7 +31,7 @@
 
     <header>
       <section class="header-wrapper">
-        <cite>“Nico, van fotomodel in wit broekpak tot verslaafde zwerfster”</cite>
+        <cite class="introcite">“Nico, van fotomodel in wit broekpak tot verslaafde zwerfster”</cite>
         <div class="nico-headerimage"></div>
       </section>
     </header>
@@ -49,6 +49,10 @@
         <article class="articlestyle model">
           De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit. De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een vat vol tegenstellingen:
         </article>
+
+        <cite class="modelcite">"Van fotomodel in wit broekpak tot verslaafde
+          zwerfster, van verlegen meisje tot succubus met doodsverachting, van een warme en erotische vrouw tot een kille ijskoningin."
+        </cite>
 
         <article class="articlestyle model">
           Een andere, eerder cynische autoriteit is James Young, de biograaf die als student in de band zat die Nico begeleidde en die stuitende herinneringen ophaalt aan het touren met ‘the queen of the bad girls’. Young schetst haar als een gewelddadige figuur die in de tourbus heroïne in haar rectum verstopte voor de douane, als een ‘failure’. Ofteringer is duidelijk een fan, terwijl Young als biograaf veeleer uit lijkt op demythologisering. Dergelijke tegengestelde mechanismen treden wel vaker tegelijkertijd in werking zodra de nalatenschap van een iconische figuur in kaart moet worden gebracht.
