band sectie toegevoegd

--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,13 @@
 
       <section class="content">
 
-        <article class="articlestyle intro">
+        <article class="articlestyle margin intro">
           Christa Päffgen, beter bekend onder haar artiestennaam Nico, was een Duits fotomodel, actrice en zangeres. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.
             <br/><br/>
             Ze werd geboren in 1938, in het door de nazis geregeerde Duitsland. In 1960 werd ze een van de bekende Warhol superstars en zong ze vocals voor het debut album van the Velvet Undeground en haar werk als solo artieste. Ze acteerde ook in enkele films zoals Federico Fellini’s La Dolce Vita (1960) en Andy Warhol’s Chelsea Girls (1966).
         </article>
 
-        <article class="articlestyle model">
+        <article class="articlestyle margin model">
           De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit. De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een vat vol tegenstellingen:
         </article>
 
@@ -54,14 +54,43 @@
           zwerfster, van verlegen meisje tot succubus met doodsverachting, van een warme en erotische vrouw tot een kille ijskoningin."
         </cite>
 
-        <article class="articlestyle model">
+        <article class="articlestyle margin model">
           Een andere, eerder cynische autoriteit is James Young, de biograaf die als student in de band zat die Nico begeleidde en die stuitende herinneringen ophaalt aan het touren met ‘the queen of the bad girls’. Young schetst haar als een gewelddadige figuur die in de tourbus heroïne in haar rectum verstopte voor de douane, als een ‘failure’. Ofteringer is duidelijk een fan, terwijl Young als biograaf veeleer uit lijkt op demythologisering. Dergelijke tegengestelde mechanismen treden wel vaker tegelijkertijd in werking zodra de nalatenschap van een iconische figuur in kaart moet worden gebracht.
         </article>
 
-        <article class="articlestyle model">
+        <article class="articlestyle margin model">
           Nico werd ontdekt als model op haar zestiende, toen ze nog verkoopster was in een lingeriezaak. De fotograaf die haar in 1954 vanuit de schaduw onder het licht bracht, was Herbert Tobias. Hij bedacht de artiestennaam Nico, naar zijn voormalige geliefde, de filmregisseur Nikos Papatakis. De naam bleek een programma te bevatten, de voorbode van een tweeslachtigheid die het imago van Nico zou gaan domineren. Haar rijzige gestalte gehuld in pantalon en haar zware, lage stem maakten indruk, zowel binnen de modewereld als in de artistieke omgeving waarin ze omstreeks 1965 belandde. In beide werelden stond het androgyne immers voor chique, enigmatisch en deviant. Denk maar aan het succes van supermodel Twiggy en de alter ego’s van David Bowie, die hun succes (net iets later dan Nico) precies mede te danken hadden aan hun geconstrueerde genderbender-esthetiek.
         </article>
 
+      </section>
+
+      <section class="gallery">
+        <div class='react-mount'>
+
+        </div>
+      </section>
+
+      <section class="content">
+
+        <article class="articlestyle margin model2">
+          Nico’s imago lag helemaal in de lijn van het onconventionele uiterlijk waar filmsterren als Marlene Dietrich en Louise Brooks al veel eerder mee koketteerden. Bijzonder was echter dat ze op het toneel verscheen tijdens de jaren 1950, toen van sterren iets geheel anders werd verwacht en de androgyne look heel even nog niet (opnieuw) omarmd werd door het publiek. Toen ze acteerlessen volgde aan de befaamde Actors Studio van Lee Strasberg, deelde ze de schoolbanken met onder meer Marilyn Monroe, en werd ze geconfronteerd met de verwachtingen van een publiek dat opgegroeid was met het fenomeen van de blonde bombshell à la Jean Harlow.
+        </article>
+
+        <article class="articlestyle margin model2 left">
+          De heel wat stuggere Nico slaagde er echter in na enkele reclamespotjes en verwaarloosbare figurantenrollen gecast te worden door de grote Italiaanse regisseur Federico Fellini. Haar passage onder haar eigen naam in La dolce vita (1960) heeft weinig om het lijf, maar toch ging haar ijle presentie naast de voluptueuze Anita Ekberg en de legendarische Marcello Mastroianni niet onopgemerkt voorbij. Dichter bij het grote filmpubliek zou Nico nooit komen.
+        </article>
+
+      </section>
+
+      <div class="black-velvet-header"></div>
+
+      <section class="content">
+        <article class="underground">
+          <h2>The Velvet Underground</h2>
+          <p class="articlestyle">
+            Het was de Amerikaanse pop artist Andy Warhol die voor de actrice een andere rol in gedachten had: die van levend kunstwerk, wandelend totaalconcept, dysfunctionele godin oftewel de superstar. In boutades sprak Warhol zijn gevoel van verveling voor de kunstwereld uit en zijn verlangen om een rockband op te richten. Nico werd in eerste instantie neergepoot met een tamboerijn, als decoratief element naast de gedrogeerde Lou Reed en het wonderkind uit Wales, John Cale. Nico voelde zich mateloos aangetrokken door de factory waar Warhol bizarre persoonlijkheden, fotomodellen met een habit, en drag queens met sterallures verzamelde om te schitteren in zijn anti-cinema met lange takes en soms slaapverwekkende anekdotiek.
+          </p>
+        </article>
       </section>
 
     </main>
