--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,12 @@
 
     <header>
       <section class="header-wrapper">
-        <cite class="introcite">“Nico, van fotomodel in wit broekpak tot verslaafde zwerfster”</cite>
+        <cite class="introcite">“Nico, van fotomodel in wit broekpak <br/> tot verslaafde zwerfster”</cite>
         <div class="nico-headerimage"></div>
       </section>
     </header>
+
+    <div class="nico-image-1"></div>
 
     <main>
 
@@ -91,6 +93,32 @@
             Het was de Amerikaanse pop artist Andy Warhol die voor de actrice een andere rol in gedachten had: die van levend kunstwerk, wandelend totaalconcept, dysfunctionele godin oftewel de superstar. In boutades sprak Warhol zijn gevoel van verveling voor de kunstwereld uit en zijn verlangen om een rockband op te richten. Nico werd in eerste instantie neergepoot met een tamboerijn, als decoratief element naast de gedrogeerde Lou Reed en het wonderkind uit Wales, John Cale. Nico voelde zich mateloos aangetrokken door de factory waar Warhol bizarre persoonlijkheden, fotomodellen met een habit, en drag queens met sterallures verzamelde om te schitteren in zijn anti-cinema met lange takes en soms slaapverwekkende anekdotiek.
           </p>
         </article>
+
+        <article class="undergroundsection">
+          <div class='react-mount2'>
+
+          </div>
+          <cite class="undergroundcite">Levend kunstwerk, wandelend totaalconcept,
+            dysfunctionele godin oftewel de superstar.
+          </cite>
+        </article>
+
+        <article class="articlestyle margin">
+            Hij choqueerde het publiek met eindeloze close-ups van vrijende, etende of slapende mensen en lichtte een tipje van de sluier van het leven in het Chelsea Hotel, een destijds gemarginaliseerd opvangtehuis voor rocksterren, omgeven door mythes en criminaliteit. Toen zong ze vocale voor The Velvet Underground. The Velvet Underground was een experimentele rockgroep uit New York die actief was van 1964 tot 1973. Hoewel de groep destijds geen noemenswaardig commercieel succes boekte, geldt The Velvet Underground tegenwoordig als een van de meest vooruitstrevende en invloedrijkste rockgroepen aller tijden. Het album waar ze voor zong was het debetalbum: The Velvet Underground & Nico.
+        </article>
+      </section>
+
+        <div class="nico-image-2"></div>
+
+      <section class="content">
+        <article class="undergroundsection">
+          <p class="articlestyle margin undergroundstyle">Nico werd er tot haar grote genoegen geëxploiteerd, maar ontdekte er ook haar eigen creatieve vermogen. In samenwerking met John Cale die het potentieel van haar unieke stem bijschaafde, kwam het standbeeld tot leven en begon ze te werken aan haar eerste solo-album: Chelsea girl. Ze nam liedjes op samen met Cale and Reed en ook met een of andere 16 jarige Jackson Browne die haar ook gezelschap hield tijdens shows. Voor een lange tijd werd niets van haar gehoord, ze spendeerde het grootste deel van haar tijd in Parijs. In het begin van 1974 tekende ze haar contract bij Island. Ze kwam tevoorschijn in een speciaal concert in Londen in het Rainbow Theatre, samen met Kevin Ayers, Cale en Brian Enso. dit resulteerde in een album genoemd naar de datum van het gebeuren: June 1st, 1974. Het jaar hierna had ze vaak discussies in de studie waardoor haar platenlabel haar uiteindelijk in 1975 liet gaan.
+          </p>
+          <div class='react-mount2'>
+
+          </div>
+        </article>
+
       </section>
 
     </main>
