--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
   <body>
 
     <header>
+      <div class="druip1"></div>
+      <div class="druip2"></div>
       <section class="header-wrapper">
         <cite class="introcite">“Nico, van fotomodel in wit broekpak <br/> tot verslaafde zwerfster”</cite>
         <div class="nico-headerimage"></div>
@@ -48,6 +50,14 @@
             Ze werd geboren in <strong>1938</strong>, in het door de nazis geregeerde <strong>Duitsland</strong>. In 1960 werd ze een van de bekende <strong>Warhol</strong> superstars en zong ze vocals voor het debut album van <strong>the Velvet Undeground</strong> en haar werk als solo artieste. Ze acteerde ook in enkele films zoals Federico Fellini’s <strong>La Dolce Vita</strong> (1960) en Andy Warhol’s <strong>Chelsea Girls</strong> (1966).
         </article>
 
+        <div class="modelsection">
+
+        <!-- <div class="img-container">
+          <img src="assets/img/one.png" class="content-img" data-id="1">
+          <img src="assets/img/two.png" class="content-img" data-id="2">
+          <img src="assets/img/three.png" class="content-img" data-id="3">
+        </div> -->
+
         <article class="articlestyle margin model">
           De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. <span class="quote">De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit.</span> De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een <strong>vat vol tegenstellingen</strong>:
         </article>
@@ -63,6 +73,8 @@
         <article class="articlestyle margin model">
           <span class="quote">Nico werd ontdekt als model op haar zestiende, toen ze nog verkoopster was in een lingeriezaak. </span>De fotograaf die haar in <strong>1954</strong> vanuit de schaduw onder het licht bracht, was Herbert Tobias. Hij bedacht de <strong>artiestennaam Nico</strong>, naar zijn voormalige geliefde, de <strong>filmregisseur Nikos Papatakis</strong>. De naam bleek een programma te bevatten, de voorbode van een tweeslachtigheid die het imago van Nico zou gaan domineren. Haar rijzige gestalte gehuld in pantalon en <span class="quote">haar zware, lage stem maakten indruk, zowel binnen de modewereld als in de artistieke omgeving waarin ze omstreeks 1965 belandde. </span> In beide werelden stond het <strong>androgyne</strong> immers voor <strong>chique, enigmatisch en deviant</strong>. Denk maar aan het succes van supermodel Twiggy en de alter ego’s van David Bowie, die hun succes (net iets later dan Nico) precies mede te danken hadden aan hun geconstrueerde genderbender-esthetiek.
         </article>
+
+      </div>
 
       </section>
 
