nog een paar details aangepast

--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,8 @@
         <cite class="introcite">“Nico, van fotomodel in wit broekpak <br/> tot verslaafde zwerfster”</cite>
         <div class="nico-headerimage"></div>
       </section>
+      <div class="druip3"></div>
     </header>
-
-    <div class="nico-image-1"></div>
 
     <main>
 
@@ -49,6 +48,12 @@
             <br/><br/>
             Ze werd geboren in <strong>1938</strong>, in het door de nazis geregeerde <strong>Duitsland</strong>. In 1960 werd ze een van de bekende <strong>Warhol</strong> superstars en zong ze vocals voor het debut album van <strong>the Velvet Undeground</strong> en haar werk als solo artieste. Ze acteerde ook in enkele films zoals Federico Fellini’s <strong>La Dolce Vita</strong> (1960) en Andy Warhol’s <strong>Chelsea Girls</strong> (1966).
         </article>
+
+      </section>
+
+        <div class="nico-image-1"></div>
+
+      <section class="content">
 
         <div class="modelsection">
 
