audio player aanzet

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
     </section>
 
     <section class="gallery">
+      <h2 class="modeltitel">Nico's modellencarrière</h2>
       <div class='react-mount'>
 
       </div>
@@ -98,7 +99,7 @@
 
     <section class='content'>
       <article class='underground minus'>
-        <h2>The Velvet Underground</h2>
+        <h2 class="velvettitle">The Velvet Underground</h2>
         <p class='articlestyle'>
           Het was de Amerikaanse pop artist <strong>Andy Warhol</strong> die voor de actrice een andere rol in gedachten had: <span class='quote'>die van levend kunstwerk, wandelend totaalconcept, dysfunctionele godin oftewel de superstar.</span> In boutades sprak Warhol zijn gevoel van verveling voor de kunstwereld uit en zijn verlangen om een rockband op te richten. Nico werd in eerste instantie neergepoot met een tamboerijn, <span class='quote'>als decoratief element naast de gedrogeerde Lou Reed en het wonderkind uit Wales, John Cale.</span> Nico voelde zich mateloos aangetrokken door de factory waar Warhol bizarre persoonlijkheden, fotomodellen met een habit, en drag queens met sterallures verzamelde om te schitteren in zijn anti-cinema met lange takes en soms slaapverwekkende anekdotiek.
         </p>
