--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,14 @@
 <body>
 
   <header>
-    <div class='druip1'></div>
-    <div class='druip2'></div>
+    <!--<div class='druip1'></div>
+    <div class='druip2'></div>-->
     <section class='header-wrapper'>
       <cite class='introcite'>“Nico, van fotomodel in wit broekpak <br /> tot verslaafde zwerfster”</cite>
       <div class='nico-headerimage'></div>
+      <p class="headerintro articlestyle"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
     </section>
-    <div class='druip3'></div>
+    <!--<div class='druip3'></div>-->
   </header>
 
   <main>
