--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <section class='header-wrapper'>
       <cite class='introcite'>“Nico, van fotomodel in wit broekpak <br /> tot verslaafde zwerfster”</cite>
       <div class='nico-headerimage'></div>
-      <p class="headerintro articlestyle"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
+      <p class="headerintro"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
     </section>
     <!--<div class='druip3'></div>-->
   </header>
