--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,9 @@
     </div>
 
     <div class="img-container">
-      <img src="assets/img/one.png" class="content-img" data-id="1"/>
-      <img src="assets/img/two.png" class="content-img" data-id="2"/>
-      <img src="assets/img/three.png" class="content-img" data-id="3"/>
+      <img src="assets/img/one.png" class="content-img1" data-id="1"/>
+      <img src="assets/img/two.png" class="content-img2" data-id="2"/>
+      <img src="assets/img/three.png" class="content-img3" data-id="3"/>
     </div>
 
     </div>
@@ -143,8 +143,8 @@
     </section>
 
     <section class='voorna'>
-      <div class='voor voorna-image'></div>
-      <div class='na voorna-image'></div>
+      <div class='voor voorna-image'><p class="jaar overlay">1964</p></div>
+      <div class='na voorna-image'><p class="jaar2 overlay">1977</p></div>
     </section>
 
     <section class='black'>
