--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,8 @@
         De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. <span class='quote'>De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit.</span> De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een <strong>vat vol tegenstellingen</strong>:
       </article>
 
+      <div class="model-image1"></div>
+
       <cite class='modelcite'>
         &quot;Van fotomodel in wit broekpak tot verslaafde
         zwerfster, van verlegen meisje tot succubus met doodsverachting, van een warme en erotische vrouw tot een kille ijskoningin.&quot;
@@ -70,9 +72,13 @@
         Een andere, eerder cynische autoriteit is James Young, de biograaf die als student in de band zat die Nico begeleidde en die stuitende herinneringen ophaalt aan het touren met <strong>‘the queen of the bad girls’</strong>. <span class='quote'>Young schetst haar als een gewelddadige figuur die in de tourbus heroïne in haar rectum verstopte voor de douane, als een ‘failure’. </span>Ofteringer is duidelijk een fan, terwijl Young als biograaf veeleer uit lijkt op demythologisering. Dergelijke tegengestelde mechanismen treden wel vaker tegelijkertijd in werking zodra de nalatenschap van een iconische figuur in kaart moet worden gebracht.
       </article>
 
+      <div class="model-image2"></div>
+
       <article class='articlestyle margin model' data-id="3">
         <span class='quote'>Nico werd ontdekt als model op haar zestiende, toen ze nog verkoopster was in een lingeriezaak. </span>De fotograaf die haar in <strong>1954</strong> vanuit de schaduw onder het licht bracht, was Herbert Tobias. Hij bedacht de <strong>artiestennaam Nico</strong>, naar zijn voormalige geliefde, de <strong>filmregisseur Nikos Papatakis</strong>. De naam bleek een programma te bevatten, de voorbode van een tweeslachtigheid die het imago van Nico zou gaan domineren. Haar rijzige gestalte gehuld in pantalon en <span class='quote'>haar zware, lage stem maakten indruk, zowel binnen de modewereld als in de artistieke omgeving waarin ze omstreeks 1965 belandde. </span> In beide werelden stond het <strong>androgyne</strong> immers voor <strong>chique, enigmatisch en deviant</strong>. Denk maar aan het succes van supermodel Twiggy en de alter ego’s van David Bowie, die hun succes (net iets later dan Nico) precies mede te danken hadden aan hun geconstrueerde genderbender-esthetiek.
       </article>
+
+      <div class="model-image3"></div>
     </div>
 
     <div class="img-container">
