Javascript bijna afgewerkt

--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,9 @@
 <body>
 
   <header>
-    <!--<div class='druip1'></div>
-    <div class='druip2'></div>-->
-    <section class='header-wrapper'>
-      <cite class='introcite'>“Nico, van fotomodel in wit broekpak <br /> tot verslaafde zwerfster”</cite>
-      <div class='nico-headerimage'></div>
+    <!-- <section class='header-wrapper'>
       <p class="headerintro"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
-    </section>
-    <!--<div class='druip3'></div>-->
+    </section> -->
   </header>
 
   <main>
@@ -50,25 +45,29 @@
 
     </section>
 
-      <div class='nico-image-1'></div>
+    <section class="parallaxSection1">
+      <div class='parallax1 parallaxItems parallaxItem1'></div>
+      <div class='parallax2 parallaxItems parallaxItem1'></div>
+      <div class='parallax3 parallaxItems parallaxItem1'></div>
+      <div class='parallax4 parallaxItems parallaxItem1'></div>
+    </section>
 
     <section class='content'>
 
       <div class='modelsection'>
 
       <div class="modelteksten">
-      <article class='articlestyle margin model' data-id="1">
+      <article class='articlestyle margin model modelarticle1' data-id="1">
         De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. <span class='quote'>De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit.</span> De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een <strong>vat vol tegenstellingen</strong>:
       </article>
 
       <div class="model-image1"></div>
 
-      <cite class='modelcite'>
-        &quot;Van fotomodel in wit broekpak tot verslaafde
-        zwerfster, van verlegen meisje tot succubus met doodsverachting, van een warme en erotische vrouw tot een kille ijskoningin.&quot;
-      </cite>
-
       <article class='articlestyle margin model' data-id="2">
+        <cite class='modelcite'>
+          &quot;Van fotomodel in wit broekpak tot verslaafde
+          zwerfster, van verlegen meisje tot succubus met doodsverachting, van een warme en erotische vrouw tot een kille ijskoningin.&quot;
+        </cite>
         Een andere, eerder cynische autoriteit is James Young, de biograaf die als student in de band zat die Nico begeleidde en die stuitende herinneringen ophaalt aan het touren met <strong>‘the queen of the bad girls’</strong>. <span class='quote'>Young schetst haar als een gewelddadige figuur die in de tourbus heroïne in haar rectum verstopte voor de douane, als een ‘failure’. </span>Ofteringer is duidelijk een fan, terwijl Young als biograaf veeleer uit lijkt op demythologisering. Dergelijke tegengestelde mechanismen treden wel vaker tegelijkertijd in werking zodra de nalatenschap van een iconische figuur in kaart moet worden gebracht.
       </article>
 
@@ -94,7 +93,6 @@
     <section class="gallery">
       <h2 class="modeltitel">Nico's modellencarrière</h2>
       <div class='react-mount'>
-
       </div>
     </section>
 
@@ -110,9 +108,13 @@
 
     </section>
 
-    <div class='black-velvet-header'></div>
+    <section class="parallaxSection2">
+      <div class='velvet-header'></div>
+      <div class='parallax5 parallaxItems parallaxItem2'></div>
+      <div class='parallax6 parallaxItems parallaxItem2'></div>
+    </section>
 
-    <section class='content'>
+    <section class='content undergroundContent'>
       <article class='underground minus'>
         <h2 class="velvettitle">The Velvet Underground</h2>
         <p class='articlestyle'>
@@ -127,7 +129,6 @@
 
       <article class='undergroundsection'>
         <div class='react-mount2'>
-
         </div>
           <p class='articlestyle tekstblok'>
             Hij choqueerde het publiek met eindeloze close-ups van vrijende, etende of slapende mensen en lichtte een tipje van de sluier van het leven in het <strong>Chelsea Hotel</strong>, een destijds gemarginaliseerd opvangtehuis voor rocksterren, omgeven door mythes en criminaliteit. Toen zong ze vocale voor <strong>The Velvet Underground</strong>. The Velvet Underground was een <strong>experimentele rockgroep</strong> uit <strong>New York</strong> die actief was <strong>van 1964 tot 1973</strong>. Hoewel de groep destijds geen noemenswaardig commercieel succes boekte, geldt The Velvet Underground tegenwoordig als een van de meest vooruitstrevende en invloedrijkste rockgroepen aller tijden. Het album waar ze voor zong was het debetalbum: <span class='pink'><strong>The Velvet Underground & Nico</strong></span>.
@@ -135,9 +136,11 @@
       </article>
     </section>
 
-    <div class='nico-image-2'></div>
+    <div class='nico-image-2'>
+      <div class='drolletje'></div>
+    </div>
 
-    <section class='content'>
+    <section class='content soloContent'>
       <article class='undergroundsection'>
         <div class='react-mount3'>
 
@@ -149,6 +152,7 @@
     </section>
 
     <section class='voorna'>
+      <cite class='overgangcite parallaxItems'>“Van fotomodel in wit broekpak <br /> tot verslaafde zwerfster”</cite>
       <div class='voor voorna-image'><p class="jaar overlay">1964</p></div>
       <div class='na voorna-image'><p class="jaar2 overlay">1977</p></div>
     </section>
@@ -176,8 +180,6 @@
           Ze maakte amper contact met het publiek tijdens live shows en ze leek af te dalen in een psychotische diepte. Op de eerste rijen van haar concerten bevonden zich de fans die opgemaakt waren net als haar in de hoop de looks van de zangeres te kunnen imiteren. Haar laatste album, <span class='underline strong2'>Camera Obscura</span>, weerspiegeld de veelzijdigheid van haar imago: <span class='italic'>tribale percussie werd gecombineerd met eighties synth-arrangementen.</span>
         </p>
       </article>
-
-      <div class='spuit'></div>
     </section>
 
     <section class='black'>
