responsive voor-na images

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
     </section>
 
     <section class='voorna'>
-      <cite class='overgangcite parallaxItems'>“Van fotomodel in wit broekpak <br /> tot verslaafde zwerfster”</cite>
+      <!--<cite class='overgangcite parallaxItems'>“Van fotomodel in wit broekpak <br /> tot verslaafde zwerfster”</cite>-->
       <div class='voor voorna-image'><p class="jaar overlay">1964</p></div>
       <div class='na voorna-image'><p class="jaar2 overlay">1977</p></div>
     </section>
