nostalgie section toegevoegd

--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,10 @@
   </main>
 
   <footer>
-
+    <section class="nostalgie">
+      <h1 class="logo"><span class="hidden">Nostalgie</span></h1>
+      <p class="description">Nostalgie is het enige radiostation in Vlaanderen dat een hele dag lang de échte classics laat horen. De muziek uit de jaren '70, '80 en '90 uur na uur. <br/> <span class="strong2">what a feeling!</span></p>
+    </section>
   </footer>
 
 </body>
