--- a/src/index.html
+++ b/src/index.html
@@ -36,82 +36,71 @@
   <main>
 
     <section class='content'>
-
       <article class='articlestyle margin intro'>
         <strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres.</strong> Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.
           <br /><br />
           Ze werd geboren in <strong>1938</strong>, in het door de nazis geregeerde <strong>Duitsland</strong>. In 1960 werd ze een van de bekende <strong>Warhol</strong> superstars en zong ze vocals voor het debut album van <strong>the Velvet Undeground</strong> en haar werk als solo artieste. Ze acteerde ook in enkele films zoals Federico Fellini’s <strong>La Dolce Vita</strong> (1960) en Andy Warhol’s <strong>Chelsea Girls</strong> (1966).
       </article>
-
     </section>
 
     <section class="parallaxSection1">
-      <div class='parallax1 parallaxItems parallaxItem1'></div>
-      <div class='parallax2 parallaxItems parallaxItem1'></div>
-      <div class='parallax3 parallaxItems parallaxItem1'></div>
-      <div class='parallax4 parallaxItems parallaxItem1'></div>
+      <div class='parallax1 parallaxItem1'></div>
+      <div class='parallax2 parallaxItem1'></div>
+      <div class='parallax3 parallaxItem1'></div>
+      <div class='parallax4 parallaxItem1'></div>
     </section>
 
     <section class='content'>
-
       <div class='modelsection'>
-
-      <div class="modelteksten">
-      <article class='articlestyle margin model modelarticle1' data-id="1">
-        De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. <span class='quote'>De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit.</span> De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een <strong>vat vol tegenstellingen</strong>:
-      </article>
-
-      <div class="model-image1"></div>
-
-      <article class='articlestyle margin model' data-id="2">
-        <cite class='modelcite'>
-          &quot;Van fotomodel in wit broekpak tot verslaafde
-          zwerfster, van verlegen meisje tot succubus met doodsverachting, van een warme en erotische vrouw tot een kille ijskoningin.&quot;
-        </cite>
-        Een andere, eerder cynische autoriteit is James Young, de biograaf die als student in de band zat die Nico begeleidde en die stuitende herinneringen ophaalt aan het touren met <strong>‘the queen of the bad girls’</strong>. <span class='quote'>Young schetst haar als een gewelddadige figuur die in de tourbus heroïne in haar rectum verstopte voor de douane, als een ‘failure’. </span>Ofteringer is duidelijk een fan, terwijl Young als biograaf veeleer uit lijkt op demythologisering. Dergelijke tegengestelde mechanismen treden wel vaker tegelijkertijd in werking zodra de nalatenschap van een iconische figuur in kaart moet worden gebracht.
-      </article>
-
-      <div class="model-image2"></div>
-
-      <article class='articlestyle margin model' data-id="3">
-        <span class='quote'>Nico werd ontdekt als model op haar zestiende, toen ze nog verkoopster was in een lingeriezaak. </span>De fotograaf die haar in <strong>1954</strong> vanuit de schaduw onder het licht bracht, was Herbert Tobias. Hij bedacht de <strong>artiestennaam Nico</strong>, naar zijn voormalige geliefde, de <strong>filmregisseur Nikos Papatakis</strong>. De naam bleek een programma te bevatten, de voorbode van een tweeslachtigheid die het imago van Nico zou gaan domineren. Haar rijzige gestalte gehuld in pantalon en <span class='quote'>haar zware, lage stem maakten indruk, zowel binnen de modewereld als in de artistieke omgeving waarin ze omstreeks 1965 belandde. </span> In beide werelden stond het <strong>androgyne</strong> immers voor <strong>chique, enigmatisch en deviant</strong>. Denk maar aan het succes van supermodel Twiggy en de alter ego’s van David Bowie, die hun succes (net iets later dan Nico) precies mede te danken hadden aan hun geconstrueerde genderbender-esthetiek.
-      </article>
-
-      <div class="model-image3"></div>
-    </div>
-
-    <div class="img-container">
-      <img src="assets/img/one.png" class="content-img1" data-id="1"/>
-      <img src="assets/img/two.png" class="content-img2" data-id="2"/>
-      <img src="assets/img/three.png" class="content-img3" data-id="3"/>
-    </div>
-
-    </div>
-
-    </section>
-
-    <section class="gallery">
-      <h2 class="modeltitel">Nico's modellencarrière</h2>
-      <div class='react-mount'>
+        <div class="modelteksten">
+          <article class='articlestyle margin model modelarticle1' data-id="1">
+            De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. <span class='quote'>De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit.</span> De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een <strong>vat vol tegenstellingen</strong>:
+          </article>
+          <div class="model-image1"></div>
+          <article class='articlestyle margin model' data-id="2">
+            <cite class='modelcite'>
+              &quot;Van fotomodel in wit broekpak tot verslaafde
+              zwerfster, van verlegen meisje tot succubus met doodsverachting, van een warme en erotische vrouw tot een kille ijskoningin.&quot;
+            </cite>
+            Een andere, eerder cynische autoriteit is James Young, de biograaf die als student in de band zat die Nico begeleidde en die stuitende herinneringen ophaalt aan het touren met <strong>‘the queen of the bad girls’</strong>. <span class='quote'>Young schetst haar als een gewelddadige figuur die in de tourbus heroïne in haar rectum verstopte voor de douane, als een ‘failure’. </span>Ofteringer is duidelijk een fan, terwijl Young als biograaf veeleer uit lijkt op demythologisering. Dergelijke tegengestelde mechanismen treden wel vaker tegelijkertijd in werking zodra de nalatenschap van een iconische figuur in kaart moet worden gebracht.
+          </article>
+          <div class="model-image2"></div>
+          <article class='articlestyle margin model' data-id="3">
+            <span class='quote'>Nico werd ontdekt als model op haar zestiende, toen ze nog verkoopster was in een lingeriezaak. </span>De fotograaf die haar in <strong>1954</strong> vanuit de schaduw onder het licht bracht, was Herbert Tobias. Hij bedacht de <strong>artiestennaam Nico</strong>, naar zijn voormalige geliefde, de <strong>filmregisseur Nikos Papatakis</strong>. De naam bleek een programma te bevatten, de voorbode van een tweeslachtigheid die het imago van Nico zou gaan domineren. Haar rijzige gestalte gehuld in pantalon en <span class='quote'>haar zware, lage stem maakten indruk, zowel binnen de modewereld als in de artistieke omgeving waarin ze omstreeks 1965 belandde. </span> In beide werelden stond het <strong>androgyne</strong> immers voor <strong>chique, enigmatisch en deviant</strong>. Denk maar aan het succes van supermodel Twiggy en de alter ego’s van David Bowie, die hun succes (net iets later dan Nico) precies mede te danken hadden aan hun geconstrueerde genderbender-esthetiek.
+          </article>
+          <div class="model-image3"></div>
+        </div>
+        <div class="img-container">
+          <img src="assets/img/one.png" class="content-img1" data-id="1"/>
+          <img src="assets/img/two.png" class="content-img2" data-id="2"/>
+          <img src="assets/img/three.png" class="content-img3" data-id="3"/>
+        </div>
       </div>
     </section>
 
-    <section class='content'>
+    <section class="gallery">
+      <div class="diamanten">
+        <div class="diamant1 parallaxItem3"></div>
+        <div class="diamant2 parallaxItem3"></div>
+        <div class="diamant3 parallaxItem3"></div>
+      </div>
+      <h2 class="modeltitel">Nico's modellencarrière</h2>
+      <div class='react-mount'></div>
+    </section>
 
+    <section class='content'>
       <article class='articlestyle margin model2'>
         Nico’s imago lag helemaal in de lijn van het onconventionele uiterlijk waar filmsterren als Marlene Dietrich en Louise Brooks al veel eerder mee koketteerden. Bijzonder was echter dat ze op het <strong>toneel</strong> verscheen tijdens de <strong>jaren 1950</strong>, toen van sterren iets geheel anders werd verwacht en de androgyne look heel even nog niet (opnieuw) omarmd werd door het publiek. Toen ze acteerlessen volgde aan de befaamde <strong>Actors Studio van Lee Strasberg</strong>, deelde ze de schoolbanken met onder meer Marilyn Monroe, en werd ze geconfronteerd met de verwachtingen van een publiek dat opgegroeid was met het fenomeen van de blonde bombshell à la Jean Harlow.
       </article>
-
       <article class='articlestyle margin model2 left'>
         De heel wat stuggere Nico slaagde er echter in na enkele reclamespotjes en verwaarloosbare figurantenrollen gecast te worden door de grote Italiaanse regisseur Federico Fellini. Haar passage onder haar eigen naam in <strong>La dolce vita</strong> (1960) heeft weinig om het lijf, maar toch ging haar ijle presentie naast de voluptueuze Anita Ekberg en de legendarische Marcello Mastroianni niet onopgemerkt voorbij. Dichter bij het grote filmpubliek zou Nico nooit komen.
       </article>
-
     </section>
 
     <section class="parallaxSection2">
       <div class='velvet-header'></div>
-      <div class='parallax5 parallaxItems parallaxItem2'></div>
-      <div class='parallax6 parallaxItems parallaxItem2'></div>
+      <div class='parallax5 parallaxItem2'></div>
+      <div class='parallax6 parallaxItem2'></div>
     </section>
 
     <section class='content undergroundContent'>
@@ -121,12 +110,10 @@
           Het was de Amerikaanse pop artist <strong>Andy Warhol</strong> die voor de actrice een andere rol in gedachten had: <span class='quote'>die van levend kunstwerk, wandelend totaalconcept, dysfunctionele godin oftewel de superstar.</span> In boutades sprak Warhol zijn gevoel van verveling voor de kunstwereld uit en zijn verlangen om een rockband op te richten. Nico werd in eerste instantie neergepoot met een tamboerijn, <span class='quote'>als decoratief element naast de gedrogeerde Lou Reed en het wonderkind uit Wales, John Cale.</span> Nico voelde zich mateloos aangetrokken door de factory waar Warhol bizarre persoonlijkheden, fotomodellen met een habit, en drag queens met sterallures verzamelde om te schitteren in zijn anti-cinema met lange takes en soms slaapverwekkende anekdotiek.
         </p>
       </article>
-
       <cite class='undergroundcite'>
         Levend kunstwerk, wandelend totaalconcept,
         dysfunctionele godin oftewel de superstar.
       </cite>
-
       <article class='undergroundsection'>
         <div class='react-mount2'>
         </div>
@@ -142,13 +129,10 @@
 
     <section class='content soloContent'>
       <article class='undergroundsection'>
-        <div class='react-mount3'>
-
-        </div>
+        <div class='react-mount3'></div>
         <p class='articlestyle undergroundstyle'>Nico werd er tot haar grote genoegen geëxploiteerd, maar ontdekte er ook haar eigen creatieve vermogen. In samenwerking met John Cale die het potentieel van haar unieke stem bijschaafde, kwam het standbeeld tot leven en begon ze te werken aan haar eerste solo-album: <strong> <span class='underline'>Chelsea girl</span> </strong>. Ze nam liedjes op samen met Cale and Reed en ook met een of andere 16 jarige Jackson Browne die haar ook gezelschap hield tijdens shows. Voor een lange tijd werd niets van haar gehoord, ze spendeerde het grootste deel van haar tijd in <strong>Parijs</strong>. In het begin van 1974 tekende ze haar contract bij Island. Ze kwam tevoorschijn in een speciaal concert in <strong>Londen</strong> in het <strong>Rainbow Theatre</strong>, samen met Kevin Ayers, Cale en Brian Enso. dit resulteerde in een album genoemd naar de datum van het gebeuren: <strong><span class='underline'>June 1st, 1974</span></strong>. Het jaar hierna had ze vaak discussies in de studie waardoor haar platenlabel haar uiteindelijk in 1975 liet gaan.
         </p>
       </article>
-
     </section>
 
     <section class='voorna'>
@@ -158,21 +142,18 @@
     </section>
 
     <section class='black'>
+      <div class="darkBackground"></div>
       <article class='articlestyle2 margin darksize'>
         <p class='articlestyle2'>
           De jaren daarop werd Nico meer aangezogen door het <span class='strong2'>Europese kunstcircuit</span>. Ze ruilde haar Amerikaanse tonge-in-cheek sfeer in voor <span class='strong2'>Europese ernst en diepgang</span>, dit aan de zijde van Franse cineast Philippe Garrel. Hij gaf haar een plaats in <span class='strong2'>hermetische filmgedichten</span>. Hoewel ze eerst vooral muziekaal meewerkte aan The Falconer uit zijn film Le Lit de la Vierge stortte ze zich terug op acteren voor La Cicatrice Intérieure. De soundtrack van de film bevatte heel wat tracks van haar derde album: <span class='underline strong2'>Desertshore</span>. Dit moet wel het hoogtepunt geweest zijn van haar solo carrière.
         </p>
       </article>
-
       <article class='solocontainer margin'>
-        <div class='react-mount4'>
-
-        </div>
+        <div class='react-mount4'></div>
         <cite class='solocite'>
           Ze had haar entree gemaakt in een donker milieu waar de donkere kant van de menselijke natuur geen pose was maar een filosofische expressie kreeg.
         </cite>
       </article>
-
       <article class='articlestyle2 margin darksize'>
         <p class='articlestyle2'>
           Terwijl ze zich op volgende albums stortte zowel op muzikaal vlak als op vlak van stem zwol de mythe rond haar figuur aan. Dit kwam vooral door haar relaties met muzikanten en kunstenaars, haar <span class='strong2'>heroïneverslaving</span>, haar imposante uiterlijk en onvoorspelbaarheid op het podium.
@@ -183,11 +164,8 @@
     </section>
 
     <section class='black'>
-
       <article class='video'>
-
       </article>
-
       <article class='articlestyle2 margin darksize'>
         <p class='articlestyle2'>
           De jaren hierna leefde Nico als een <span class='strong2'>zwerver</span>, ze ging van land naar land en spendeerde de laatste jaren van haar leven in <span class='strong2'>Manchester (Engeland)</span>. Op 18 juli 1988, op vakantie op Ibiza samen met haar zoon Ari had ze een <span class='strong2'>hartaanval tijdens haar fietstocht</span> waar ze viel en haar hoofd hard stootte. Ze werd bewusteloos gevonden door een taxi bestuurder die haar naar het ziekenhuis bracht. Volgens de eerste diagnose was ze te lang bloot gesteld aan de warmte. Na de röntgenfoto’s kwam uiteindelijk aan het licht dat ze gestorven is door een <span class='strong2'>hevige hersenbloeding</span>.
@@ -198,10 +176,7 @@
           <span class='ari'>– Ari Boulogne</span>
         </cite>
       </article>
-
-
     </section>
-
   </main>
 
   <footer>
@@ -212,5 +187,4 @@
   </footer>
 
 </body>
-
 </html>
