react en js afgewerkt

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
           </article>
           <div class="model-image3"></div>
         </div>
-        <div class="img-container">
+        <div class="img-container parallaxSection7">
           <img src="assets/img/one.png" class="content-img1" data-id="1"/>
           <img src="assets/img/two.png" class="content-img2" data-id="2"/>
           <img src="assets/img/three.png" class="content-img3" data-id="3"/>
@@ -118,18 +118,21 @@
         <div class='react-mount2'>
         </div>
           <p class='articlestyle tekstblok'>
-            Hij choqueerde het publiek met eindeloze close-ups van vrijende, etende of slapende mensen en lichtte een tipje van de sluier van het leven in het <strong>Chelsea Hotel</strong>, een destijds gemarginaliseerd opvangtehuis voor rocksterren, omgeven door mythes en criminaliteit. Toen zong ze vocale voor <strong>The Velvet Underground</strong>. The Velvet Underground was een <strong>experimentele rockgroep</strong> uit <strong>New York</strong> die actief was <strong>van 1964 tot 1973</strong>. Hoewel de groep destijds geen noemenswaardig commercieel succes boekte, geldt The Velvet Underground tegenwoordig als een van de meest vooruitstrevende en invloedrijkste rockgroepen aller tijden. Het album waar ze voor zong was het debetalbum: <span class='pink'><strong>The Velvet Underground & Nico</strong></span>.
+            Hij choqueerde het publiek met eindeloze close-ups van vrijende, etende of slapende mensen en lichtte een tipje van de sluier van het leven in het <strong>Chelsea Hotel</strong>, een destijds gemarginaliseerd opvangtehuis voor rocksterren, omgeven door mythes en criminaliteit. Toen zong ze vocale voor <strong>The Velvet Underground</strong>. The Velvet Underground was een <strong>experimentele rockgroep</strong> uit <strong>New York</strong> die actief was <strong>van 1964 tot 1973</strong>. Hoewel de groep destijds geen noemenswaardig commercieel succes boekte, geldt The Velvet Underground tegenwoordig als een van de meest vooruitstrevende en invloedrijkste rockgroepen aller tijden. Het album waar ze voor zong was het debetalbum: <strong class='underline'>The Velvet Underground & Nico</strong>.
           </p>
       </article>
     </section>
 
-    <div class='nico-image-2'>
+    <div class='parallaxItem6'>
       <div class='drolletje'></div>
     </div>
 
     <section class='content soloContent'>
       <article class='undergroundsection'>
-        <div class='react-mount3'></div>
+        <div class="albums">
+          <div class='react-mount3'></div>
+          <div class='react-mount4'></div>
+        </div>
         <p class='articlestyle undergroundstyle'>Nico werd er tot haar grote genoegen geëxploiteerd, maar ontdekte er ook haar eigen creatieve vermogen. In samenwerking met John Cale die het potentieel van haar unieke stem bijschaafde, kwam het standbeeld tot leven en begon ze te werken aan haar eerste solo-album: <strong> <span class='underline'>Chelsea girl</span> </strong>. Ze nam liedjes op samen met Cale and Reed en ook met een of andere 16 jarige Jackson Browne die haar ook gezelschap hield tijdens shows. Voor een lange tijd werd niets van haar gehoord, ze spendeerde het grootste deel van haar tijd in <strong>Parijs</strong>. In het begin van 1974 tekende ze haar contract bij Island. Ze kwam tevoorschijn in een speciaal concert in <strong>Londen</strong> in het <strong>Rainbow Theatre</strong>, samen met Kevin Ayers, Cale en Brian Enso. dit resulteerde in een album genoemd naar de datum van het gebeuren: <strong><span class='underline'>June 1st, 1974</span></strong>. Het jaar hierna had ze vaak discussies in de studie waardoor haar platenlabel haar uiteindelijk in 1975 liet gaan.
         </p>
       </article>
@@ -142,14 +145,14 @@
     </section>
 
     <section class='black'>
-      <div class="darkBackground"></div>
+      <div class="parallaxItem4"></div>
       <article class='articlestyle2 margin darksize'>
         <p class='articlestyle2'>
           De jaren daarop werd Nico meer aangezogen door het <span class='strong2'>Europese kunstcircuit</span>. Ze ruilde haar Amerikaanse tonge-in-cheek sfeer in voor <span class='strong2'>Europese ernst en diepgang</span>, dit aan de zijde van Franse cineast Philippe Garrel. Hij gaf haar een plaats in <span class='strong2'>hermetische filmgedichten</span>. Hoewel ze eerst vooral muziekaal meewerkte aan The Falconer uit zijn film Le Lit de la Vierge stortte ze zich terug op acteren voor La Cicatrice Intérieure. De soundtrack van de film bevatte heel wat tracks van haar derde album: <span class='underline strong2'>Desertshore</span>. Dit moet wel het hoogtepunt geweest zijn van haar solo carrière.
         </p>
       </article>
       <article class='solocontainer margin'>
-        <div class='react-mount4'></div>
+        <div class='react-mount5'></div>
         <cite class='solocite'>
           Ze had haar entree gemaakt in een donker milieu waar de donkere kant van de menselijke natuur geen pose was maar een filosofische expressie kreeg.
         </cite>
@@ -162,10 +165,13 @@
         </p>
       </article>
     </section>
-
+    <section class="parallaxSection5">
+      <div class='parallax7 parallaxItem5'></div>
+      <div class='parallax8 parallaxItem5'></div>
+      <div class='parallax9 parallaxItem5'></div>
+      <div class='parallax10 parallaxItem5'></div>
+    </section>
     <section class='black'>
-      <article class='video'>
-      </article>
       <article class='articlestyle2 margin darksize'>
         <p class='articlestyle2'>
           De jaren hierna leefde Nico als een <span class='strong2'>zwerver</span>, ze ging van land naar land en spendeerde de laatste jaren van haar leven in <span class='strong2'>Manchester (Engeland)</span>. Op 18 juli 1988, op vakantie op Ibiza samen met haar zoon Ari had ze een <span class='strong2'>hartaanval tijdens haar fietstocht</span> waar ze viel en haar hoofd hard stootte. Ze werd bewusteloos gevonden door een taxi bestuurder die haar naar het ziekenhuis bracht. Volgens de eerste diagnose was ze te lang bloot gesteld aan de warmte. Na de röntgenfoto’s kwam uiteindelijk aan het licht dat ze gestorven is door een <span class='strong2'>hevige hersenbloeding</span>.
